--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <script>
             var request = location.href.split('pixijs.github.io/docs')[1];
+            if (!request) request = '/index.html';
             location.href = 'http://pixijs.download/release/docs' + request;
         </script>
     </body>
