--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     </head>
     <body>
         <script>
-            var request = location.href.split('pixijs.github.io/docs')[1];
-            if (!request || request === '/') request = '/index.html';
-            location.href = 'http://pixijs.download/release/docs' + request;
+            location.href = 'http://pixijs.download/release/docs/index.html';
         </script>
     </body>
 </html>
