--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Pixi.js — A 2D JavaScript Renderer</title>
+        <title>PixiJS — The HTML5 Creation Engine</title>
     </head>
     <body>
         <script>
