--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <script>
-            location.href = 'http://pixijs.download/release/docs/index.html';
+            location.href = 'https://pixijs.download/release/docs/index.html';
         </script>
     </body>
 </html>
