--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     </head>
     <body>
         <script>
-            var parts = location.href.split(/\/docs\/?/);
-            location.href = 'https://pixijs.download/release/docs/' + (parts[1] || 'index.html');
+            location.href = 'https://pixijs.download/release/docs/index.html';
         </script>
     </body>
 </html>
